Created DynamoDB server that can store JSON objects.

--- a/package.json
+++ b/package.json
@@ -26,5 +26,12 @@
       "$",
       "THREE"
     ]
+  },
+  "dependencies": {
+    "aws-sdk": "^2.515.0",
+    "dotenv": "^8.1.0",
+    "ejs": "^2.6.2",
+    "express": "^4.17.1",
+    "uuid": "^3.3.3"
   }
 }
