--- a/package.json
+++ b/package.json
@@ -28,10 +28,13 @@
     ]
   },
   "dependencies": {
+    "@auth0/auth0-spa-js": "^1.1.1",
     "aws-sdk": "^2.515.0",
     "dotenv": "^8.1.0",
     "ejs": "^2.6.2",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "jwks-rsa": "^1.6.0",
     "uuid": "^3.3.3"
   }
 }
