Refactored project to support linting as Husky check.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,8 +23,12 @@
   "globals": {
     "document": false,
     "navigator": false,
-    "window": false
+    "window": false,
+    "$": true,
+    "THREE": true
   },
+
+  "ignorePatterns": ["node_modules/", "static/imported-js/"],
 
   "rules": {
     "accessor-pairs": "error",
