--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "An express server boilerplate configured for easy use in future projects.",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "npx eslint ./",
+    "validate": "npm-run-all --parallel test lint",
+    "precommit": "npm run validate",
+    "prepush": "npm run validate"
   },
   "repository": {
     "type": "git",
@@ -21,12 +25,6 @@
     "url": "https://github.com/TimTinkers/General-Express-Server/issues"
   },
   "homepage": "https://github.com/TimTinkers/General-Express-Server#readme",
-  "standard": {
-    "globals": [
-      "$",
-      "THREE"
-    ]
-  },
   "dependencies": {
     "@auth0/auth0-spa-js": "^1.1.1",
     "aws-sdk": "^2.515.0",
@@ -44,6 +42,7 @@
     "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
-    "husky": "^4.2.1"
+    "husky": "^4.2.1",
+    "npm-run-all": "^4.1.5"
   }
 }
